# Trip

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
assets/models/: building_small.mtl  building_tall.mtl  cube.mtl  wall.mtl
docs/: API.md
engine/: CMakeLists.txt
engine/include/engine/animation/: animation_clip.h  animation_player.h  bone_buffer.h  gltf_loader.h  skeleton.h
engine/include/engine/audio/: audio.h
engine/include/engine/core/: camera.h  input.h  window.h
engine/include/engine/physics/: physics_world.h
engine/include/engine/renderer/: allocator.h  descriptors.h  frustum.h  gbuffer.h  gpu_culling.h  gui.h  hiz.h  instance_buffer.h  lighting_pass.h  lod_generator.h  mesh.h  mesh_simplifier.h  model.h  pipeline.h  post_process.h  renderer.h  shadow_map.h  skinned_mesh.h  swapchain.h  taa.h  text.h  texture.h  vulkan_context.h
engine/include/engine/scene/: components.h  lod.h  scene.h  serializer.h
engine/include/engine/world/: chunk.h  terrain.h
engine/src/animation/: animation_player.cpp  bone_buffer.cpp  gltf_loader.cpp
engine/src/audio/: audio.cpp
engine/src/core/: camera.cpp  input.cpp  window.cpp
engine/src/physics/: physics_world.cpp
engine/src/renderer/: allocator.cpp  descriptors.cpp  frustum.cpp  gbuffer.cpp  gpu_culling.cpp  gui.cpp  hiz.cpp  instance_buffer.cpp  lighting_pass.cpp  lod_generator.cpp  mesh.cpp  mesh_simplifier.cpp  model.cpp  pipeline.cpp  post_process.cpp  renderer.cpp  shadow_map.cpp  skinned_mesh.cpp  stb_impl.cpp  swapchain.cpp  taa.cpp  text.cpp  texture.cpp  tinyobj_impl.cpp  vma_impl.cpp  vulkan_context.cpp
engine/src/scene/: scene.cpp  serializer.cpp
engine/src/world/: chunk.cpp  terrain.cpp
game/: CMakeLists.txt
game/src/: deferred.cpp  main.cpp  room.cpp  teapot.cpp  triangle.cpp
resources/: engine-architecture.md  math.md  moltenvk-gotchas.md  rendering.md  vulkan.md
shaders/: CMakeLists.txt  gbuffer.frag  gbuffer.vert  gbuffer_instanced.frag  gbuffer_instanced.vert  gbuffer_skinned.vert  gpu_cull.comp  hiz_generate.comp  lighting.frag  lighting.vert  mesh.frag  mesh.vert  postprocess.frag  postprocess.vert  shadow.frag  shadow.vert  shadow_instanced.vert  shadow_skinned.vert  taa_resolve.comp  text.frag  text.vert  triangle.vert
